==> Bambu-Research-Group/Bambu-Bus/AMCU/src/BambuBus.cpp <==
#include "BambuBus.h"
#include "CRC16.h"
#include "CRC8.h"
#define max_filament_num 4

void send_uart(const unsigned char *data, uint16_t length)
{
    TX_IDLE = false;
    digitalWrite(BambuBus_pin_de, 1);

    /* Must disable interrupt to prevent handle lock contention */
    HAL_NVIC_DisableIRQ(use_Serial.irq);
    /* The following function will enable UART_IT_TXE and error interrupts */
    HAL_UART_Transmit_IT(&use_Serial.handle, data, length);
    /* Enable interrupt */
    HAL_NVIC_EnableIRQ(use_Serial.irq);
}

void BambuBus_init(bool if_lowspeed_debug)
{
    crc_8.reset(0x39, 0x66, 0, false, false);
    crc_16.reset(0x1021, 0x913D, 0, false, false);
    pinMode(BambuBus_pin_de, OUTPUT);
    if (if_lowspeed_debug)
        UART_Init(115200);
    else
        UART_Init(1228800);

    filament[0].color = 0xFF0000FF;
    filament[1].color = 0x00FF000FF;
    filament[2].color = 0x0000FFFF;
    filament[3].color = 0x888888FF;
}

packge_type get_packge_type(unsigned char *buf, int length)
{
    if (packge_check_crc16(buf, length) == false)
    {
        return BambuBus_packge_ERROR;
    }
    if (buf[1] == 0xC5)
    {

        switch (buf[4])
        {
        case 0x03:
            return BambuBus_packge_Cxx;
        case 0x04:
            return BambuBus_packge_Dxx;
        case 0x05:
            return BambuBus_packge_Fxx;
        case 0x06:
            return BambuBus_packge_REQx6;
        case 0x07:
            return BambuBus_packge_NFC_detect;
        case 0x08:
            return BambuBus_packge_Set_filament;
        case 0x20:
            return BambuBus_packge_PE;
        default:
            return BambuBus_packge_ETC;
        }
    }
    else
    {
        if (buf[8] == 0x12)
        {
            switch (buf[10])
            {
            case 0x03:
                return BambuBus_packge_X05_MC;
            case 0x06:
                return BambuBus_packge_X05_AP;
            case 0x09:
                return BambuBus_packge_X05_AP2;
            default:
                return BambuBus_packge_ETC;
            }
        }
        else
        {
            return BambuBus_packge_ETC;
        }
    }
    return BambuBus_packge_ERROR;
}

void send_for_Cxx(unsigned char *buf, int length)
{
    Cxx_res[1] = 0xC0 | (packge_num << 3);
    if (packge_num < 7)
        packge_num++;
    else
        packge_num = 0;
    packge_send_with_crc(Cxx_res, sizeof(Cxx_res));
}

void send_for_Dxx(unsigned char *buf, int length)
{
    if (need_res_for_06)
    {
        Dxx_res2[1] = 0xC0 | (packge_num << 3);
        Dxx_res2[9] = filament_flag_on;
        Dxx_res2[10] = filament_flag_on - filament_flag_detected;
        Dxx_res2[11] = filament_flag_on - filament_flag_detected;
        Dxx_res2[12] = res_for_06_num;
        Dxx_res2[13] = filament_flag_detected;
        packge_send_with_crc(Dxx_res2, sizeof(Dxx_res2));
        need_res_for_06 = false;
    }
    else
    {
        Dxx_res[1] = 0xC0 | (packge_num << 3);
        Dxx_res[9] = filament_flag_on;
        Dxx_res[10] = filament_flag_on - filament_flag_detected;
        Dxx_res[11] = filament_flag_on - filament_flag_detected;
        Dxx_res[12] = buf[9];
        Dxx_res[13] = filament_flag_detected;
        packge_send_with_crc(Dxx_res, sizeof(Dxx_res));
    }
    if (packge_num < 7)
        packge_num++;
    else
        packge_num = 0;
}

void send_for_Fxx(unsigned char *buf, int length)
{
    if ((buf[5] == 0x01) && (buf[6] == 0x00))
    {
        memcpy(F10_res + 4, buf + 4, 23);
        packge_send_with_crc(F10_res, sizeof(F10_res));
    }
}

void BambuBus_run()
{
    if (BambuBus_have_data)
    {
        int data_length = BambuBus_have_data;
        uint8_t buf_X[1000];
        digitalToggle(13);
        BambuBus_have_data = 0;
        memcpy(buf_X, BambuBus_data_buf, data_length);
        packge_type type_n = get_packge_type(buf_X, data_length);

        delayMicroseconds(100);
        switch (type_n)
        {
        case BambuBus_packge_PE:
            break;
        case BambuBus_packge_Cxx:
            send_for_Cxx(buf_X, data_length);
            break;
        case BambuBus_packge_Dxx:
            send_for_Dxx(buf_X, data_length);
            break;
        case BambuBus_packge_Fxx:
            send_for_Fxx(buf_X, data_length);
            break;
        case BambuBus_packge_REQx6:
            send_for_REQx6(buf_X, data_length);
            break;
        case BambuBus_packge_X05_MC:
            send_for_X05_MC(buf_X, data_length);
            break;
        case BambuBus_packge_X05_AP:
            send_for_X05_AP(buf_X, data_length);
            break;
        case BambuBus_packge_X05_AP2:
            send_for_X05_AP2(buf_X, data_length);
            break;
        case BambuBus_packge_NFC_detect:
            send_for_NFC_detect(buf_X, data_length);
            break;
        case BambuBus_packge_Set_filament:
            send_for_Set_filament(buf_X, data_length);
            break;
        default:

            break;
        }
    }
    // HAL_UART_Transmit(&use_Serial.handle,&s,1,1000);

    NFC_detect_run();
}
